package com.ecms.entity;

public enum RoomCategory {
    CLINICAL_EXAM,
    CARE_RECOVERY,
    DIAGNOSTIC_IMAGING,
    OPTICAL_WORKSHOP
}
